--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bookmarker</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="style/bootstrap.min.css" rel="stylesheet" />
+    <link href="style/style.css" rel="stylesheet" />
 </head>
 
 <body onload="fetchBookmarks()">
